Navigation is fully functional and styling has been added.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Parse React Authentication</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700" rel="stylesheet" type="text/css">
     <link type="text/css" rel="stylesheet" href="node_modules/materialize-css/bin/materialize.css"  media="screen,projection">
     <link rel="stylesheet" type="text/css" href="/styles/main.sass.css">
 </head>
