--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700" rel="stylesheet" type="text/css">
     <link type="text/css" rel="stylesheet" href="node_modules/materialize-css/bin/materialize.css"  media="screen,projection">
-    <link rel="stylesheet" type="text/css" href="/styles/main.sass.css">
+    <link rel="stylesheet" type="text/css" href="./styles/main.sass.css">
 </head>
 <body>
 
@@ -13,7 +13,7 @@
     <main id="app"></main>
 
     <script src="//www.parsecdn.com/js/parse-1.6.4.min.js"></script>
-    <script type="text/javascript" src="/scripts/bundle.js"></script>
-    <script type="text/javascript" src="/node_modules/materialize-css/bin/materialize.js"></script>
+    <script type="text/javascript" src="./scripts/bundle.js"></script>
+    <script type="text/javascript" src="./node_modules/materialize-css/bin/materialize.js"></script>
 </body>
 </html>
